# EmailSender_Backend

./: .env-dist  Makefile  README.md  docker-compose.yml  pyproject.toml
.run/: EmailSender.run.xml
docker/: Dockerfile  post_deploy.sh
src/: pyproject.toml
src/backend/: urls.py
src/backend/settings/: settings.py
src/core/api/: urls.py
src/core/api/serializers/: __init__.py  email_serializers.py  user_serializers.py
src/core/api/views/: __init__.py  email_serializers.py  email_views.py  user_views.py
src/core/common/: producer.py
src/core/exceptions/: api.py
src/core/factories/: __init__.py  email_factories.py  user_factories.py
src/core/migrations/: 0001_initial.py
src/core/models/: __init__.py  abstract.py  client.py  email.py  user.py
src/tests/: helpers.py
src/tests/core/api/serializers/: test_email_serializers.py  test_user_serializers.py
src/tests/core/api/views/: test_email_views.py  test_user_views.py
src/tests/core/models/: test_email.py
